--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -245,6 +245,8 @@ paths:
           content:
             application/json:
               schema: {$ref: '#/components/schemas/username'}
+        '400':
+          description: Bad Request
         '403': 
           description: You cannot perform this operation.
         '500': 
@@ -296,6 +298,8 @@ paths:
                 items: {$ref: '#/components/schemas/photo'}
         '204': 
           description: No one posted anything yet.   
+        '400':
+          description: Bad Request
         '403':
           description: You cannot perform this operation.
       security:
@@ -320,6 +324,8 @@ paths:
           content:
             application/json:
               schema: {$ref: '#/components/schemas/photo'}
+        '400':
+          description: Bad Request
         '403': 
           description: You cannot perform this operation.
         '500': 
@@ -426,8 +432,14 @@ paths:
           content:
             application/json:
               schema: {$ref: '#/components/schemas/comment'}
+        '400':
+          description: Bad Request
         '403': 
           description: You cannot perform this operation.
+        '404':
+          description: Content not found.
+        '500':
+          description: Internal server Error.
       security:
         - bearerAuth: []
           
@@ -448,7 +460,9 @@ paths:
         '403': 
           description: You cannot perform this operation.
         '404':
-          description: comment not found.
+          description: comment or photo not found.
+        '500':
+          description: internal server error
       security:
         - bearerAuth: []
 
@@ -471,9 +485,15 @@ paths:
           description: You just started following the user.
           content:
             application/json:
-              schema: {$ref : "#/components/schemas/username"}
+              schema: {$ref : "#/components/schemas/user"}
+        '400':
+          description: Bad Request
         '403': 
           description: You cannot perform this operation.
+        '404':
+          description: Content not found.
+        '500':
+          description: Internal Server Error
       security:
         - bearerAuth: []
   
@@ -489,8 +509,14 @@ paths:
       responses:
         '204': 
           description: You just unfollowed the user.
+        '400':
+          description: Bad Request
+        '404':
+          description: Content Not Found
         '403': 
           description: You cannot perform this operation.
+        '500':
+          description: Internal Server Error
       security:
         - bearerAuth: []
     
@@ -517,6 +543,10 @@ paths:
               schema: {$ref : "#/components/schemas/username"}
         '403': 
           description: You cannot perform this operation.
+        '404':
+          description: Content Not Found
+        '500':
+          description: Internal Server Error
       security:
         - bearerAuth: []
 
@@ -532,7 +562,13 @@ paths:
       responses:
         '204': 
           description: You just unbanned the user.
+        '400':
+          description: Bad Request        
         '403': 
           description: You cannot perform this operation.
+        '404':
+          description: Content not found.
+        '500':
+          description: Internal Server Error
       security:
         - bearerAuth: []
