--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -372,11 +372,14 @@ paths:
         description: user that wants to like the photo and photo that he wants to like
         content:
           application/json:
-            schema: {$ref: '#/components/schemas/photoid'}
+            schema: {$ref: '#/components/schemas/like'}
         required: true
       responses:
         '201': 
           description: You liked the photo.
+          content:
+            application/json:
+              schema: {$ref: '#/components/schemas/photo'}
         '403': 
           description: You cannot perform this operation.
         '404':
